--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,78 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
+    <script src="https://kit.fontawesome.com/25c9399caa.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="/">
+          <%= image_tag "icon.jpg", width: '50px', class: "img-fluid" %>
+        </a>
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <% if admin_signed_in? %>
+              <li class='nav-item'>
+                <%= link_to '投稿一覧', admin_posts_path, class: 'btn btn-outline-dark mr-1' %>
+              </li>
+              <li class='nav-item'>
+                <%= link_to '会員一覧', admin_users_path, class: 'btn btn-outline-dark mr-1' %>
+              </li>
+              <li class='nav-item'>
+                <%= link_to 'ジャンル一覧', admin_genres_path, class: 'btn btn-outline-dark mr-1' %>
+              </li>
+              <li class='nav-item'>
+                <%= link_to 'ログアウト', destroy_admin_session_path, method: :delete, class: 'btn btn-outline-dark' %>
+              </li>
+
+
+            <% elsif user_signed_in? %>
+              <!--<li class="text-secondary mr-5 mt-2">ようこそ、<%#= current_user.last_name %>さん！</li>-->
+              <li class="nav-item">
+                <%= link_to 'マイページ', mypage_path, class: 'btn btn-outline-dark mr-1' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to '投稿する', new_post_path, class: "btn btn-outline-dark mr-1" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to '投稿一覧', posts_path, class: "btn btn-outline-dark mr-1" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-outline-dark mr-1" %>
+              </li>
+              
+            <% else %>
+              <li class="nav-item">
+                <%= link_to '投稿一覧', posts_path, class: "btn btn-outline-dark mr-1" %>
+              </li>
+
+              <li class="nav-item">
+                <%= link_to '新規登録', new_user_registration_path, class: "btn btn-outline-dark mr-1" %>
+              </li>
+
+              <li class="nav-item">
+                <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-dark" %>
+              </li>
+              
+            <% end %>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <%= yield %>
+  　<footer class="fixed-bottom text-center">
+  　　<div class="container">
+  　　  <p style="color: #aaa;">&copy; 2023 kaden_trend_navi</p>
+  　　</div>
+　　</footer>
   </body>
 </html>
