--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,26 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div>
+  <h1>画像</h1>
+</div>
+<div>
+  <p>家電製品は、現代の生活において欠かせない物となっています。その生活をサポートするために「家電トレンドナビ」を作成しました。</p>
+  <p>当サイトではユーザーからの実際のレビューのを掲載。ユーザーの生の声を通じて、製品の日常でのパフォーマンスを知ることができます。</p>
+</div>
+<div>
+  <h1>なんか入れる予定</h1>
+</div>
+<div>
+  <% if user_signed_in? %>
+  <p>
+    <%= link_to '投稿一覧', posts_path %>
+  </p>
+  
+  <% else %>
+  <p>
+    <%= link_to '新規登録', new_user_registration_path %>
+  </p>
+  <p>
+    <%= link_to 'ログイン', new_user_session_path %>
+  </p>
+  <% end %>
+</div>
+
