--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Public::Posts#index</h1>
-<p>Find me in app/views/public/posts/index.html.erb</p>
+<h1>新着投稿</h1>
+<% @posts.each do |post| %>
+ <div>
+   <p><%= image_tag post.user.get_profile_image(100,100) %></p>
+   <p>投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %></p>
+   <p>タイトル：<%= link_to post.title, post_path(post.id) %></p>
+   <p>ジャンル：<%= post.genre.name %></p>
+   <p>型番：<%= post.product_name %></p>
+
+ </div>
+<% end %>
