--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,73 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <h5 class="border p-3 my-3">
+      新規会員登録
+    </h5>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+  </div>
+  <br>
+  <%= form_with(model: User.new, url: user_registration_path) do |f| %>
+    <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  
+  <div class="row d-flex justify-content-center">
+     <div class="col-2"></div>
+    <div class="col-3">
+      <%= f.label :name, "名前" %>
+    </div>
+    <div class="col-7">
+      <%= f.text_field :name, class: "rounded" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="row d-flex justify-content-center">
+     <div class="col-2"></div>
+    <div class="col-3">
+      <%= f.label :email, "メールアドレス" %>
+    </div>
+    <div class="col-7">
+      <%= f.email_field :email, placeholder: "sample@example.com", class: "rounded" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="row d-flex justify-content-center">
+     <div class="col-2"></div>
+    <div class="col-3">
+      <%= f.label :sex, "性別" %>
+    </div>
+    <div class="col-7">
+      <%= f.select :sex, ['男性', '女性', 'その他'], { prompt: '選択してください' }, class: 'rounded' %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="row d-flex justify-content-center">
+    <div class="col-2"></div>
+    <div class="col-3">
+      <%= f.label :password, "パスワード" %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %>文字以上)</em>
+      <% end %>
+    </div>
+    <div class="col-7">
+      <%= f.password_field :password, autocomplete: "new-password", class: "rounded" %>
+    </div>
   </div>
-<% end %>
+  <div class="row d-flex justify-content-center">
+     <div class="col-2"></div>
+    <div class="col-3">
+      <%= f.label :password_confirmation, "パスワード(確認用)" %>
+    </div>
+    <div class="col-7">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "rounded" %>
+    </div>
+    <div>
+      <%= f.submit "新規登録", class:"btn btn-success" %>
+    </div>
+  </div>
+  <% end %>
 
-<%= render "public/shared/links" %>
+  <div class="row d-flex justify-content-center my-4">
+    <h6 class="">既に登録済みの方は<%= render "public/shared/links" %></h6>
+  </div>
+
+</div>
