--- a/app/views/public/genres/_genre.html.erb
+++ b/app/views/public/genres/_genre.html.erb
@@ -1,13 +1,13 @@
-<h4 style="text-shadow: 0px 0px 10px white;"><strong>ジャンル検索</strong></h4>
-<table class="table">
+<h4><strong>家電一覧</strong></h4>
+<table>
   <% genres.each do |genre| %>
-    <tbody style="background-color: #f7f6f5;">
+    <tbody>
       <tr>
-        <td style="text-align: left; color: #583822;">
-          <%= link_to genre.name, posts_path(genre_id: genre.id), method: :get, class: "text-decoration-none text-dark" %>
+        <td>
+          <%= link_to genre.name, genre_path(genre.id), method: :get %>
         </td>
-        <td style="text-align: right; color: #4e454a;">
-          <%= genre.items.count %>
+        <td>
+          <%= genre.posts.count %>
         </td>
       </tr>
     </tbody>
