--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -8,19 +8,23 @@
 <div>
   <h1>なんか入れる予定</h1>
 </div>
-<div>
+<div class="btn-wrapper col-10 mx-auto">
   <% if user_signed_in? %>
-  <p>
-    <%= link_to '投稿一覧', posts_path %>
-  </p>
+  <div class="row">
+    <%= link_to '投稿一覧', posts_path,class: "btn btn-secondary btn-sm btn-block mb-3" %>
+ </div>
   
   <% else %>
-  <p>
-    <%= link_to '新規登録', new_user_registration_path %>
-  </p>
-  <p>
-    <%= link_to 'ログイン', new_user_session_path %>
-  </p>
+  
+  <div class="row">
+    <%= link_to "ゲストログイン（閲覧用）", public_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3", method: :post %>
+  </div>
+  <div class="row">
+    <%= link_to '新規登録', new_user_registration_path, class: "btn btn-info btn-sm btn-block mb-3" %>
+  </div>
+  <div class="row">
+    <%= link_to 'ログイン', new_user_session_path, class: "btn btn-success btn-sm btn-block"  %>
+  </div>
   <% end %>
 </div>
 
