--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
             <% elsif user_signed_in? %>
               <!--<li class="text-secondary mr-5 mt-2">ようこそ、<%#= current_user.last_name %>さん！</li>-->
               <li class="nav-item">
-                <%= link_to 'マイページ', mypage_path, class: 'btn btn-outline-dark mr-1' %>
+                <%= link_to 'マイページ', user_mypage_path(current_user), class: 'btn btn-outline-dark mr-1' %>
               </li>
               <li class="nav-item">
                 <%= link_to '投稿する', new_post_path, class: "btn btn-outline-dark mr-1" %>
