--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -28,8 +28,8 @@
           <%= render 'public/comments/comments_list', post: @post %>
         </div>
         <div>
-          <%= form_with model: [@post, @comment], url:post_comment_index_path(@post),method: :post do|f| %>
-          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+          <%= form_with model: [@post, @comment], url:post_comments_path(@post),method: :post do|f| %>
+          <%= f.text_area :text, rows: '5', placeholder: "コメントをここに" %>
           <%= f.submit "コメント", class: "btn btn-primary" %>
         </div>
         <% end %>
