--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,1 +1,52 @@
-<h1>マイページ</h1>
+<div>
+  <h5 class="border p-3 my-3">
+    <%= @user.name %>さんのマイページ
+  </h5>
+</div>
+
+<div>
+  <table>
+    <tr>
+      <td><p><%= image_tag @user.get_profile_image(100, 100) %></p></td>
+    </tr>
+    <tr>
+      <td><%= @user.name %></td>
+    </tr>
+    <tr>
+      <td><%= @user.sex %></td>
+    </tr>
+  </table>
+
+  <table>
+    <div>
+      <tr>
+        <td>
+          <% unless @user.guest_user? %>
+            <div class="row">
+              <%= link_to "プロフィールの編集", edit_information_path, class: "btn btn-outline-secondary btn-block" %>
+            </div>
+          <% end %>
+        </td>
+      </tr>
+    </div>
+  </table>
+</div>
+
+<!--<div>-->
+<!--  <h2>ユーザー投稿一覧</h2>-->
+<!--  <table>-->
+<!--    <thead>-->
+<!--    </thead>-->
+<!--    <tbody>-->
+<!--      <%# @posts.each do |post| %>-->
+<!--        <tr>-->
+<!--          <td><p><%#= image_tag post.user.get_profile_image(100, 100) %></p></td>-->
+<!--          <td><p>投稿日：<%#= post.created_at.strftime("%Y年%m月%d日") %></p></td>-->
+<!--          <td><p>タイトル：<%#= link_to post.title, post_path(post.id) %></p></td>-->
+<!--          <td><p>ジャンル：<%#= post.genre.name %></p></td>-->
+<!--          <td><p>型番：<%#= post.product_name %></p></td>-->
+<!--        </tr>-->
+<!--      <%# end %>-->
+<!--    </tbody>-->
+<!--  </table>-->
+<!--</div>-->
