--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Public::Users#edit</h1>
-<p>Find me in app/views/public/users/edit.html.erb</p>
-
-
-
-<!--ゲストログインの表記-->
+<h2>プロフィール編集</h2>
+<%= form_with model: @user, url: update_information_path, method: :patch do |f| %>
+  <label for="inputImage">プロフィール画像変更</label>
+  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+  <%= image_tag @user.get_profile_image(100,100), class: 'rounded-circle' %>
+  
+  <label for="inputName">名前</label>
+  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:@user.name%>
+  
+  <label for="inputEmail">メールアドレス変更</label>
+  <%= f.email_field :email, placeholder: "メールアドレス",placeholder: @user.email %>
+  
+  <div>
+    <%= f.submit "変更を保存" %>
+    <%= link_to "マイページに戻る" , user_mypage_path(current_user) %>
+  </div>
+<% end %>
