絞り込み表示機能実装

--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -3,9 +3,16 @@
 </div>
 
 <h1>新着投稿</h1>
+<p>
+     <%= link_to '新しい順', posts_path(latest: "true") %>
+     <%= link_to '古い順', posts_path(old: "true") %>
+     <%= link_to '評価の高い順', posts_path(star_count_many: "true") %>
+     <%= link_to '評価の低い順', posts_path(star_count_few: "true") %>
+</p>
+      
 <% @posts.each do |post| %>
  <div>
-   <p><%= image_tag post.user.get_profile_image(100,100) %></p>
+   <p><%= link_to image_tag(post.user.get_profile_image(100, 100)), user_mypage_path(post.user) %></p>
    <p>投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %></p>
    <p>タイトル：<%= link_to post.title, post_path(post.id) %></p>
    <p>ジャンル：<%= post.genre.name %></p>
