admin側実装済み

--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,2 +1,37 @@
-<h1>Admin::Posts#show</h1>
-<p>Find me in app/views/admin/posts/show.html.erb</p>
+<div class="row">
+  <div class="col-md-1 mb-3" ></div>
+
+<div>
+  <h4>レビュー詳細</h4>
+  <p>投稿日：<%= @post.created_at.strftime("%Y年%m月%d日") %></p>
+  <p>ユーザー名: <%= @post.user.name %></p>
+  <p>性別: <%= @post.user.sex %></p>
+  <p>タイトル：<%= @post.title %></p>
+  <p>ジャンル：<%= @post.genre.name %></p>
+  <p>型番：<%= @post.product_name %></p>
+  <%= render 'public/posts/static_rate', post: @post %>
+  <p><%= image_tag @post.get_image(100,100) %></p>
+  <p><%= @post.introduction %></p>
+  
+</div>
+<div><p><%= link_to "削除", post_path(@post), class:"btn btn-sm btn-danger", method: :delete , data: {confirm: "本当に消しますか？"} %></p></div>
+
+  <div class="col md-4">
+    <div class="card">
+      <div class="card-header">
+        <h5 class="card-title">コメント欄</h5>
+      </div>
+      <div class="card-body">
+        <div id="comments_list">
+          <%= render 'public/comments/comments_list', post: @post %>
+        </div>
+        <!--<div>-->
+        <!--  <%#= form_with model: [@post, @comment], url:post_comments_path(@post),method: :post do|f| %>-->
+        <!--  <%#= f.text_area :text, rows: '5', placeholder: "コメントをここに" %>-->
+        <!--  <%#= f.submit "コメント", class: "btn btn-primary" %>-->
+        <!--</div>-->
+        <!--<#% end %>-->
+      </div>
+    </div>
+  </div>
+</div>
