--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin::Posts#index</h1>
-<p>Find me in app/views/admin/posts/index.html.erb</p>
+
+<h1>ユーザー投稿一覧</h1>
+<p>
+     <%= link_to '新しい順', admin_posts_path(latest: "true") %>
+     <%= link_to '古い順', admin_posts_path(old: "true") %>
+     <%= link_to '評価の高い順', admin_posts_path(star_count_many: "true") %>
+     <%= link_to '評価の低い順', admin_posts_path(star_count_few: "true") %>
+</p>
+
+<% @posts.each do |post| %>
+ <div>
+   <p><%= link_to image_tag(post.user.get_profile_image(100, 100)), admin_user_path(post.user) %></p>
+   <p>投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %></p>
+   <p>タイトル：<%= link_to post.title, admin_post_path(post.id) %></p>
+   <p>ジャンル：<%= post.genre.name %></p>
+   <p>型番：<%= post.product_name %></p>
+</div>
+<% end %>
