--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,2 +1,50 @@
-<h1>Admin::Users#edit</h1>
-<p>Find me in app/views/admin/users/edit.html.erb</p>
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <h5 class="border p-3 my-3">会員情報編集</h5>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+    <%= form_with model: @user, url: admin_user_path, method: :patch do |f| %>
+      <table class="table table-borderless">
+
+        <tr>
+          <td>会員ID</td>
+          <td><%= @user.id %></td>
+        </tr>
+
+        <tr>
+          <td>名前</td>
+          <td><%= f.text_field :name %></td>
+        </tr>
+
+        <tr>
+          <td>性別</td>
+          <td><%= @user.sex %></td>
+        </tr>
+
+        <tr>
+          <td>メールアドレス</td>
+          <td><%= f.text_field :email %></td>
+        </tr>
+
+        <tr>
+          <td>会員ステータス</td>
+          <!--<td>-->
+          <!--  <%#= f.radio_button :user_status, :true %>-->
+          <!--  <%#= label :user_status, "有効" , { value: :true } %>-->
+
+          <!--  <%#= f.radio_button :user_status, :false %>-->
+          <!--  <%#= label :user_status, "退会" , { value: :false } %>-->
+          <!--</td>-->
+        </tr>
+
+      </table>
+
+      <div class="row d-flex justify-content-center">
+        <tr>
+          <td><%= f.submit "変更を保存", class:"btn btn-success" %></td>
+        </tr>
+      </div>
+    <% end %>
+  </div>
+</div>
