--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,2 +1,54 @@
-<h1>Admin::Users#show</h1>
-<p>Find me in app/views/admin/users/show.html.erb</p>
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <h5 class="border p-3 my-3">
+      <%= @user.name %>さんのマイページ
+    </h5>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+    <div>
+      <table class="table table-borderless">
+
+        <tr>
+          <td>会員ID</td>
+          <td><%= @user.id %></td>
+        </tr>
+
+        <tr>
+          <td>氏名</td>
+          <td><%= @user.name %></td>
+        </tr>
+
+        <tr>
+          <td>性別</td>
+          <td><%= @user.sex %></td>
+        </tr>
+
+        <tr>
+          <td>メールアドレス</td>
+          <td><%= @user.email %></td>
+        </tr>
+
+        <tr>
+          <td>会員ステータス</td>
+          <!--<td>-->
+          <!--  <%# if @user.user_status %>-->
+          <!--    <p>有効</p>-->
+          <!--  <%# else %>-->
+          <!--    <p>退会</p>-->
+          <!--  <%# end %>-->
+          <!--</td>-->
+        </tr>
+      </table>
+
+      <table class="table table-borderless">
+        <div class="row d-flex justify-content-center">
+        <tr>
+          <td><%= link_to "編集する", edit_admin_user_path, class: "btn btn-success" %></td>
+        </tr>
+      </div>
+
+      </table>
+    </div>
+  </div>
+</div>
