--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,2 +1,53 @@
-<h1>Public::Posts#edit</h1>
-<p>Find me in app/views/public/posts/edit.html.erb</p>
+<%= render "public/shared/error_messages", resource: @post %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <h1>投稿編集画面</h1>  
+       <%= form_with model: @post do |f| %>
+       <div class="form-group">
+        <h5>タイトル</h5>
+        <%= f.text_field :title %>
+       </div>
+       <div class="form-group">
+        <h5>型式</h5>
+        <%= f.text_field :product_name %>
+       </div>
+       <div class="form-group">
+        <h5>ジャンル</h5>
+        <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "選択して下さい", class: "rounded" %>
+       </div>
+       <div class="form-group">
+        <h4>紹介画像</h4>
+  　　　　<%= f.file_field :image, accept: "image/*" %>
+       </div>
+       <div class="form-group" id="star">
+      <%= f.label :評価 %>
+      <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
+      <div id="post_raty"></div>
+    </div>
+    <script>
+      $(document).on('turbolinks:load', function() {
+        let elem = document.querySelector('#post_raty');
+        if (elem == null) return;
+
+        elem.innerHTML = ""
+        let opt = {
+          starOn: "<%= asset_path('star-on.png') %>",
+          starOff: "<%= asset_path('star-off.png') %>",
+          scoreName: 'post[star]',
+        };
+        raty(elem, opt);
+      });
+    </script>
+       <div class="form-group">
+        <h5>紹介文</h5>
+        <%= f.text_area :introduction %>
+       </div>
+<br>
+       <%= f.submit '更新する', class: "btn btn-success" %>
+       <% end %>
+<%= link_to "戻る", post_path(@post.id) %>
+     </div>
+   </div>
+</div>
