--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,4 +1,6 @@
 <h2>プロフィール編集</h2>
+<%= render "public/shared/error_messages", resource: @user %>
+
 <%= form_with model: @user, url: update_information_path, method: :patch do |f| %>
 
   <label for="inputImage">プロフィール画像変更</label>
