退会機能等追加

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -29,13 +29,13 @@
 
         <tr>
           <td>会員ステータス</td>
-          <!--<td>-->
-          <!--  <%#= f.radio_button :user_status, :true %>-->
-          <!--  <%#= label :user_status, "有効" , { value: :true } %>-->
+          <td>
+            <%= f.radio_button :user_status, :false %>
+            <%= label :user_status, "有効" , { value: :false } %>
 
-          <!--  <%#= f.radio_button :user_status, :false %>-->
-          <!--  <%#= label :user_status, "退会" , { value: :false } %>-->
-          <!--</td>-->
+            <%= f.radio_button :user_status, :true %>
+            <%= label :user_status, "退会" , { value: :true } %>
+          </td>
         </tr>
 
       </table>
