--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -9,10 +9,13 @@
 
 <% @posts.each do |post| %>
  <div>
-   <p><%= link_to image_tag(post.user.get_profile_image(100, 100)), admin_user_path(post.user) %></p>
+   <p><%= link_to image_tag(post.user.get_profile_image, width: 100, height: 100), admin_user_path(post.user) %></p>
    <p>投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %></p>
    <p>タイトル：<%= link_to post.title, admin_post_path(post.id) %></p>
    <p>ジャンル：<%= post.genre.name %></p>
    <p>型番：<%= post.product_name %></p>
 </div>
 <% end %>
+<div class="d-flex justify-content-center">
+  <%= paginate @posts %>
+</div>
