--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -10,11 +10,15 @@
   <p>ジャンル：<%= @post.genre.name %></p>
   <p>型番：<%= @post.product_name %></p>
   <%= render 'public/posts/static_rate', post: @post %>
-  <p><%= image_tag @post.get_image(100,100) %></p>
-  <p><%= @post.introduction %></p>
+  
   
 </div>
-<div><p><%= link_to "削除", post_path(@post), class:"btn btn-sm btn-danger", method: :delete , data: {confirm: "本当に消しますか？"} %></p></div>
+<div>
+  <p><%= image_tag @post.get_image, width: 100, height: 100 %></p>
+  <p><%= @post.introduction %></p>
+</div>
+<!--なぜかroutesにdeleteのパスがない-->
+<div><p><%= link_to "削除", admin_post_path(@post), class:"btn btn-sm btn-danger", method: :delete , data: {confirm: "本当に消しますか？"} %></p></div>
 
   <div class="col md-4">
     <div class="card">
@@ -22,8 +26,18 @@
         <h5 class="card-title">コメント欄</h5>
       </div>
       <div class="card-body">
-        <div id="comments_list">
-          <%= render 'public/comments/comments_list', post: @post %>
+        <div>
+          <% @post.comments.each do |comment| %>
+        <div class="card mb-3">
+         <div class="card-body">
+           <span class="comment-name small"><%= comment.user.name %></span>
+           <span>
+               <%= link_to '削除', admin_comment_path(comment), method: :delete %>
+           </span>
+         　<p class="card-text"><%= comment.text %></p>
+         </div>
+       </div>
+     <% end %>
         </div>
         <!--<div>-->
         <!--  <%#= form_with model: [@post, @comment], url:post_comments_path(@post),method: :post do|f| %>-->
