--- a/app/views/public/genres/show.html.erb
+++ b/app/views/public/genres/show.html.erb
@@ -6,11 +6,14 @@
        <% @posts.each do |post| %>
          <div>
            <%= link_to post_path(post.id) do %>
-             <%= image_tag post.get_image(10,10) %><br>
+             <%= image_tag post.get_image, width: 100, height: 100 %><br>
              <%= post.title %><br>
            <% end %>
          </div>
        <% end %>
     </div>
    </div>
+</div>
+<div class="d-flex justify-content-center">
+  <%= paginate @genres %>
 </div>
