--- a/app/views/public/posts/_static_rate.html.erb
+++ b/app/views/public/posts/_static_rate.html.erb
@@ -1,4 +1,4 @@
-<div id="star_<%= post.id %>">
+<div id="star_<%= post.id %>"></div>
 <script>
 $(document).on('turbolinks:load', function() {
   let elem = document.querySelector('#star_<%= post.id %>');
