--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -26,20 +26,25 @@
       <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
       <div id="post_raty"></div>
     </div>
+    
     <script>
-      $(document).on('turbolinks:load', function() {
-        let elem = document.querySelector('#post_raty');
-        if (elem == null) return;
+     $(document).on('turbolinks:load', function() {
+    let elem = document.querySelector('#post_raty');
+    if (elem == null) return;
 
-        elem.innerHTML = ""
-        let opt = {
-          starOn: "<%= asset_path('star-on.png') %>",
-          starOff: "<%= asset_path('star-off.png') %>",
-          scoreName: 'post[star]',
-        };
-        raty(elem, opt);
-      });
-    </script>
+    let currentStar = $('#review_star').val() || 0; // 現在のstarの値を取得、なければ0
+
+    elem.innerHTML = ""
+    let opt = {
+      starOn: "<%= asset_path('star-on.png') %>",
+      starOff: "<%= asset_path('star-off.png') %>",
+      scoreName: 'post[star]',
+      score: currentStar, // ここで現在のstarの値をRatyに設定
+    };
+    raty(elem, opt);
+  });
+</script>
+       
        <div class="form-group">
         <h5>紹介文</h5>
         <%= f.text_area :introduction %>
