--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -17,7 +17,7 @@
   
 </div>
 <div>
-  <p><%= image_tag @post.get_image(100,100) %></p>
+  <p><%= image_tag @post.get_image, width: 100, height: 100 %></p>
   <p><%= @post.introduction %></p>
 </div>
 
