--- a/app/views/public/users/chcek.html.erb
+++ b/app/views/public/users/chcek.html.erb
@@ -1,2 +1,9 @@
-<h1>Public::Users#chcek</h1>
-<p>Find me in app/views/public/users/chcek.html.erb</p>
+<h1>本当に退会しますか？</h1>
+  <p>
+    停止すると、会員登録情報やこれまでの投稿履歴が閲覧できなくなります。<br>
+    ですが、投稿したレビューは保持されます。<br>
+    退会する場合は、「退会する」をクリックしてください。
+  </p>
+
+  <%= link_to "退会しない", user_mypage_path(current_user), :class => "btn btn-primary ms-3" %>
+  <%= link_to "退会する", withdraw_path, method: :patch, :class => "btn btn-danger ms-3", data: { confirm: "本当に退会しますか？" }  %>
