--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -5,7 +5,7 @@
 
   <label for="inputImage">プロフィール画像変更</label>
   <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <%= image_tag @user.get_profile_image(100,100), class: 'rounded-circle' %>
+  <%= image_tag @user.get_profile_image, width: 100, height: 100, class: 'rounded-circle' %>
 
   <label for="inputName">名前</label>
   <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:@user.name%>
@@ -15,7 +15,8 @@
 
   <div>
     <%= f.submit "変更を保存" %>
-    <%= link_to "マイページに戻る" , user_mypage_path(current_user) %>
+    <%= link_to "マイページに戻る" , user_mypage_path(current_user), class: "btn btn-secondary" %>
+    <%= link_to "退会する", chcek_path, class: "btn btn-danger" %>
   </div>
 <% end %>
 </br></br></br></br></br></br>
