--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -7,7 +7,7 @@
 <div>
   <table>
     <tr>
-      <td><p><%= image_tag @user.get_profile_image(100, 100),class: 'rounded-circle' %></p></td>
+      <td><p><%= image_tag @user.get_profile_image, width: 100, height: 100,class: 'rounded-circle' %></p></td>
     </tr>
     <tr>
       <td><%= @user.name %></td>
@@ -33,21 +33,24 @@
   </table>
 </div>
 
-<!--<div>-->
-<!--  <h2>ユーザー投稿一覧</h2>-->
-<!--  <table>-->
-<!--    <thead>-->
-<!--    </thead>-->
-<!--    <tbody>-->
-<!--      <%# @posts.each do |post| %>-->
-<!--        <tr>-->
-<!--          <td><p><%#= image_tag post.user.get_profile_image(100, 100) %></p></td>-->
-<!--          <td><p>投稿日：<%#= post.created_at.strftime("%Y年%m月%d日") %></p></td>-->
-<!--          <td><p>タイトル：<%#= link_to post.title, post_path(post.id) %></p></td>-->
-<!--          <td><p>ジャンル：<%#= post.genre.name %></p></td>-->
-<!--          <td><p>型番：<%#= post.product_name %></p></td>-->
-<!--        </tr>-->
-<!--      <%# end %>-->
-<!--    </tbody>-->
-<!--  </table>-->
-<!--</div>-->
+<div>
+  <h2>ユーザー投稿一覧</h2>
+  <table>
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+          <td><p><%= image_tag post.user.get_profile_image, width: 100, height: 100 %></p></td>
+          <td><p>投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %></p></td>
+          <td><p>タイトル：<%= link_to post.title, post_path(post.id) %></p></td>
+          <td><p>ジャンル：<%= post.genre.name %></p></td>
+          <td><p>型番：<%= post.product_name %></p></td>
+        </tr>
+      <% end %>
+      
+    </tbody>
+  </table>
+      <div class="d-flex justify-content-center">
+      <%= paginate @posts %>
+      </div>
+</div>
+<br><br><br><br><br><br><br><br>
