--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -7,15 +7,19 @@
      <%= link_to '評価の低い順', admin_posts_path(star_count_few: "true") %>
 </p>
 
-<% @posts.each do |post| %>
- <div>
-   <p><%= link_to image_tag(post.user.get_profile_image, width: 100, height: 100), admin_user_path(post.user) %></p>
-   <p>投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %></p>
-   <p>タイトル：<%= link_to post.title, admin_post_path(post.id) %></p>
-   <p>ジャンル：<%= post.genre.name %></p>
-   <p>型番：<%= post.product_name %></p>
-</div>
+<% if !@posts.empty? %>
+  <% @posts.each do |post| %>
+   <div>
+     <p><%= link_to image_tag(post.user.get_profile_image, width: 100, height: 100), admin_user_path(post.user) %></p>
+     <p>投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %></p>
+     <p>タイトル：<%= link_to post.title, admin_post_path(post.id) %></p>
+     <p>ジャンル：<%= post.genre.name %></p>
+     <p>型番：<%= post.product_name %></p>
+  </div>
+  <% end %>
+  <div class="d-flex justify-content-center">
+    <%= paginate @posts %>
+  </div>
+<% else %>
+ まだ投稿がありません
 <% end %>
-<div class="d-flex justify-content-center">
-  <%= paginate @posts %>
-</div>
