--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -10,6 +10,7 @@
      <%= link_to '評価の低い順', posts_path(star_count_few: "true") %>
 </p>
 
+<% if !@posts.empty? %>
 <% @posts.each do |post| %>
  <div>
    <p><%= link_to image_tag(post.user.get_profile_image, width: 100, height: 100), user_mypage_path(post.user) %></p>
@@ -22,5 +23,8 @@
 <div class="d-flex justify-content-center">
   <%= paginate @posts %>
 </div>
+<% else %>
+ まだ投稿がありません
+<% end %>
 
 <br><br><br><br><br><br><br><br><br>
