ログイン・新規登録・編集ページレイアウト変更

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,1 +1,17 @@
 @use '~bootstrap/scss/bootstrap';
+
+// 全体の背景色
+body {
+  background-color: #fff9f4;
+}
+
+
+// user編集ページ
+.form-group{
+  margin-bottom: 20px;
+}
+
+.genre_search{
+  margin-top: 16px;
+  margin-left: 10px;
+}
