--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,12 @@
 
   <body class="d-flex flex-column vh-100">
      <header class="shadow-sm">
-      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="/">
-          <%= image_tag "icon.jpg", width: '50px', class: "img-fluid" %>
+          <%= image_tag "家電トレンドnavi.jpg", width: '150px', class: "img-fluid" %>
         </a>
         
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -81,7 +81,7 @@
       </div>
       <%= yield %>
     </main>
-<footer class="fixed-bottom text-center">
+<footer class="fixed-bottom text-center bg-light py-2">
   <div class="container">
       <p style="color: #aaa;">&copy; 2023 kaden_trend_navi</p>
       </div>
