--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,22 +1,47 @@
-<h2>プロフィール編集</h2>
 <%= render "public/shared/error_messages", resource: @user %>
-
-<%= form_with model: @user, url: update_information_path, method: :patch do |f| %>
-
-  <label for="inputImage">プロフィール画像変更</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <%= image_tag @user.get_profile_image, width: 100, height: 100, class: 'rounded-circle' %>
-
-  <label for="inputName">名前</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:@user.name%>
-
-  <label for="inputEmail">メールアドレス変更</label>
-  <%= f.email_field :email, placeholder: "メールアドレス",placeholder: @user.email %>
-
-  <div>
-    <%= f.submit "変更を保存" %>
-    <%= link_to "マイページに戻る" , user_mypage_path(current_user), class: "btn btn-secondary" %>
-    <%= link_to "退会する", chcek_path, class: "btn btn-danger" %>
+<div class=container>
+  <div class="row my-5">
+    <h2 class="col-12 text-center">プロフィール編集</h2>
   </div>
-<% end %>
-</br></br></br></br></br></br>
+  <div class=row-md-5>
+    <%= form_with model: @user, url: update_information_path, method: :patch do |f| %>
+    <div class="infomation-edit">
+        <table class="table" >
+          <tr>
+            <td>ユーザ名の変更</td>
+              <td>
+                <div class="form-group">
+                  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:@user.name%>
+                </div>
+              </td>
+          </tr>
+          <tr>
+            <td>メールアドレスの変更</td>
+              <td>
+                <div class="form-group">
+                  <%= f.email_field :email, placeholder: "メールアドレス",placeholder: @user.email %>
+                </div>
+              </td>
+          </tr>
+          <tr>
+            <td>プロフィール画像の変更</td>
+              <td>
+                <div class="form-group">
+                  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+                </div>
+              </td>
+          </tr>
+          </tr>
+          <tr>
+            <td colspan="2">
+              <div class="d-flex justify-content-between mt-5">
+                <%= f.submit "編集内容を保存", class: "btn btn-primary" %>
+                <%= link_to "マイページに戻る" , user_mypage_path(current_user), class: "btn btn-secondary" %>
+                <%= link_to "退会する", chcek_path, class: "btn btn-danger" %>
+              </div>
+            </td>
+        </table>
+    </div>
+    <% end %>
+  </div>
+</div>
