--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,60 +1,66 @@
-<!--タイトル-->
+
 <div class="row my-5">
   <h1 class="col-12 text-center">新着投稿</h1>
 </div>
-<!--ジャンル検索-->
-<div class=row>
-  <div class="genre_search col-lg-2">
-    <%= render 'public/genres/genre', genres: @genres %>
+
+<div class="row">
+  <div class="genre_search">
+    <div class="col-4">
+      <%= render 'public/genres/genre', genres: @genres %>
+    </div>
   </div>
-<!--投稿一覧-->
-    <div class="col-lg-7">
-      <div class="sort_feature text-right mb-2">
-          <%= link_to '新しい順', posts_path(latest: "true") %>
-          <%= link_to '古い順', posts_path(old: "true") %>
-          <%= link_to '評価の高い順', posts_path(star_count_many: "true") %>
-          <%= link_to '評価の低い順', posts_path(star_count_few: "true") %>
-      </div>
-
-
-<div class="card mb-3 mx-auto" style="max-width: 600px; ">
-  <div class="row no-gutters">
-    <% if !@posts.empty? %>
-      <% @posts.each do |post| %>
-        <div><%= link_to image_tag(post.user.get_profile_image, width: 120, height: 120), user_mypage_path(post.user) %></div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title"><%= link_to post.title, post_path(post.id) %></h5>
-               <p class="card-text"><br>
-                                    ジャンル：<%= post.genre.name %><br>
-                                    型番：<%= post.product_name %>
-               </p>
-               <p class="card-text"><%= post.created_at.strftime("%Y年%m月%d日") %>
+  <div class="col-8 justify-content-start">
+    <ul class="nav justify-content-center mb-2">
+      <li class="nav-item mr-1">
+        <%= link_to '新しい順', posts_path(latest: "true"), class:"btn btn-outline-dark #{'active' if params[:latest]}" %>
+      </li>
+      <li class="nav-item mr-1">
+        <%= link_to '古い順', posts_path(old: "true"), class:"btn btn-outline-dark #{'active' if params[:old]}" %>
+      </li>
+      <li class="nav-item mr-1">
+        <%= link_to '評価の高い順', posts_path(star_count_many: "true"), class:"btn btn-outline-dark #{'active' if params[:star_count_many]}" %>
+      </li>
+      <li class="nav-item mr-1">
+        <%= link_to '評価の低い順', posts_path(star_count_few: "true"), class:"btn btn-outline-dark #{'active' if params[:star_count_few]}" %>
+      </li>
+    </ul>
+    <div class="mb-3 mx-auto" style="max-width: 600px; ">
+      <div class="row no-gutters">
+        <% if !@posts.empty? %>
+          <% @posts.each do |post| %>
+            <div class="card col-12" style="margin-bottom: 10px;">
+              <div class="row">
+               <div class="col-3 m-auto" style="padding-left: 40px;">
+                 <%= link_to image_tag(post.user.get_profile_image, width: 120, height: 120, class: 'rounded-circle'), user_mypage_path(post.user) %>
+               </div>
+                <div class="col-9">
+                  <div class="card-body">
+                    <h5 class="card-title"><%= link_to post.title, post_path(post.id) %></h5>
+                     <p class="card-text"><br>
+                                          ジャンル：<%= post.genre.name %><br>
+                                          型番：<%= post.product_name %>
+                     </p>
+                     <p class="card-text"><%= post.created_at.strftime("%Y年%m月%d日") %>
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
-        <% end %>
+            <% end %>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-center">
+      <div class=paginate>
+        <%= paginate @posts %>
+      </div>
+    </div>
+      <% else %>
+      まだ投稿がありません
+      <% end %>
   </div>
 </div>
 
 
-            
-            
-<div class="d-flex justify-content-center">
-  <%= paginate @posts %>
-</div>
-<% else %>
- まだ投稿がありません
-<% end %>
-</div>
-</div>
 
 
-
-
-
-     
-      
-        
-        
-        
 
