--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -14,7 +14,7 @@
   <p>ジャンル：<%= @post.genre.name %></p>
   <p>型番：<%= @post.product_name %></p>
   <P>おすすめ：<%= render 'static_rate', post: @post %></P>
-  
+
 </div>
 <div>
   <p><%= image_tag @post.get_image, width: 100, height: 100 %></p>
@@ -43,10 +43,12 @@
         <div id="comments_list">
           <%= render 'public/comments/comments_list', post: @post %>
         </div>
+        <% unless @post.user == current_user || current_user.guest_user? %>
         <div>
           <%= form_with model: [@post, @comment], url:post_comments_path(@post),method: :post do|f| %>
           <%= f.text_area :text, rows: '5', placeholder: "コメントをここに" %>
           <%= f.submit "コメント", class: "btn btn-primary" %>
+          <% end %>
         </div>
         <% end %>
       </div>
