--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,25 +1,54 @@
+<div class="row my-5">
+  <h1 class="col-12 text-center">新着投稿</h1>
+</div>
 
-<h1>ユーザー投稿一覧</h1>
-<p>
-     <%= link_to '新しい順', admin_posts_path(latest: "true") %>
-     <%= link_to '古い順', admin_posts_path(old: "true") %>
-     <%= link_to '評価の高い順', admin_posts_path(star_count_many: "true") %>
-     <%= link_to '評価の低い順', admin_posts_path(star_count_few: "true") %>
-</p>
+<div class="col-12 justify-content-center">
+    <ul class="nav justify-content-center mb-2">
+      <li class="nav-item mr-1">
+        <%= link_to '新しい順', admin_posts_path(latest: "true"), class:"btn btn-outline-dark #{'active' if params[:latest]}" %>
+      </li>
+      <li class="nav-item mr-1">
+        <%= link_to '古い順', admin_posts_path(old: "true"), class:"btn btn-outline-dark #{'active' if params[:old]}" %>
+      </li>
+      <li class="nav-item mr-1">
+        <%= link_to '評価の高い順', admin_posts_path(star_count_many: "true"), class:"btn btn-outline-dark #{'active' if params[:star_count_many]}" %>
+      </li>
+      <li class="nav-item mr-1">
+        <%= link_to '評価の低い順', admin_posts_path(star_count_few: "true"), class:"btn btn-outline-dark #{'active' if params[:star_count_few]}" %>
+      </li>
+    </ul>
+    <div class="mb-3 mx-auto" style="max-width: 600px; ">
+      <div class="row no-gutters">
+        <% if !@posts.empty? %>
+          <% @posts.each do |post| %>
+            <div class="card col-12" style="margin-bottom: 10px;">
+              <div class="row">
+                <div class="col-3 m-auto" style="padding-left: 40px;">
+                  <%= link_to image_tag(post.user.get_profile_image, width: 120, height: 120, class: 'rounded-circle'), user_mypage_path(post.user) %>
+                </div>
+                <div class="col-9">
+                  <div class="card-body">
+                    <h5 class="card-title"><%= link_to post.title, post_path(post.id) %></h5>
+                     <p class="card-text"><br>
+                                          ジャンル：<%= post.genre.name %><br>
+                                          型番：<%= post.product_name %>
+                     </p>
+                     <p class="card-text"><%= post.created_at.strftime("%Y年%m月%d日") %>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <% end %>
+      </div>
+    </div>
 
-<% if !@posts.empty? %>
-  <% @posts.each do |post| %>
-   <div>
-     <p><%= link_to image_tag(post.user.get_profile_image, width: 100, height: 100), admin_user_path(post.user) %></p>
-     <p>投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %></p>
-     <p>タイトル：<%= link_to post.title, admin_post_path(post.id) %></p>
-     <p>ジャンル：<%= post.genre.name %></p>
-     <p>型番：<%= post.product_name %></p>
+    <div class="d-flex justify-content-center">
+      <div class=paginate>
+        <%= paginate @posts %>
+      </div>
+    </div>
+      <% else %>
+      まだ投稿がありません
+      <% end %>
   </div>
-  <% end %>
-  <div class="d-flex justify-content-center">
-    <%= paginate @posts %>
-  </div>
-<% else %>
- まだ投稿がありません
-<% end %>
+</div>
