--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row d-flex justify-content-center">
-    <h5 class="border p-3 my-3">会員一覧</h5>
+  <div class="row">
+    <h4 class="col-12 text-center border p-3 my-3">会員一覧</h4>
   </div>
 
   <div class="row">
