レイアウト編集完了

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -27,7 +27,7 @@ footer {
   margin-top: 23px;
   margin-left: 10px;
 }
-// なぜか表示されず
+// 投稿フォーム（ジャンル）
 #custom_genre_select {
   height: 30px;
   width: 240;
@@ -37,3 +37,12 @@ footer {
 .custom-text-area {
   height: 150px; 
 }
+
+#post_introduction{
+  height: 120px;
+}
+
+#post_title{
+  height: 31px;
+}
+
