--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,50 +1,71 @@
 <div class="row">
-  <div class="col-md-1 mb-3" ></div>
+  <div class="col-7 offset-2 mb-3">
+    <div class="card">
+      <div class="card-header">
+        <h5 class="card-title">レビュー詳細</h5>
+      </div>
+      <div class="card-body">
+        <table class="table">
+          <tbody>
+             <tr>
+              <th>投稿日</th>
+              <td><%= @post.created_at.strftime("%Y年%m月%d日") %></td>
+            </tr>
+            <tr>
+              <th>ユーザ名</th>
+              <td><%= @post.user.name %></td>
+            </tr>
+            <tr>
+              <th>性別</th>
+              <td><%= @post.user.sex %></td>
+            </tr>
+            <tr>
+              <th>タイトル</th>
+              <td><%= @post.title %></td>
+            </tr>
+            <tr>
+              <th>ジャンル</th>
+              <td><%= @post.genre.name %></td>
+            </tr>
+            <tr>
+              <th>型番</th>
+              <td><%= @post.product_name %></td>
+            <tr>
+              <th>おすすめ</th>
+              <td><%= render 'public/posts/static_rate', post: @post %></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td><%= image_tag @post.get_image, width: 200, height: 200 %></td>
+            </tr>
+            <tr>
+              <th>本文</th>
+              <td><%= @post.introduction %></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="text-center mt-4">
+      <%= link_to "投稿削除", post_path(@post), class:"btn btn-sm btn-danger", method: :delete , data: {confirm: "本当に消しますか？"} %>
+    </div> 
+  </div>
 
-<div>
-  <h4>レビュー詳細</h4>
-  <p>投稿日：<%= @post.created_at.strftime("%Y年%m月%d日") %></p>
-  <p>ユーザー名: <%= @post.user.name %></p>
-  <p>性別: <%= @post.user.sex %></p>
-  <p>タイトル：<%= @post.title %></p>
-  <p>ジャンル：<%= @post.genre.name %></p>
-  <p>型番：<%= @post.product_name %></p>
-  <%= render 'public/posts/static_rate', post: @post %>
-  
-  
-</div>
-<div>
-  <p><%= image_tag @post.get_image, width: 100, height: 100 %></p>
-  <p><%= @post.introduction %></p>
-</div>
-<!--なぜかroutesにdeleteのパスがない-->
-<div><p><%= link_to "削除", admin_post_path(@post), class:"btn btn-sm btn-danger", method: :delete , data: {confirm: "本当に消しますか？"} %></p></div>
-
-  <div class="col md-4">
+  <div class="col-3">
     <div class="card">
       <div class="card-header">
         <h5 class="card-title">コメント欄</h5>
       </div>
       <div class="card-body">
-        <div>
           <% @post.comments.each do |comment| %>
-        <div class="card mb-3">
-         <div class="card-body">
-           <span class="comment-name small"><%= comment.user.name %></span>
-           <span>
-               <%= link_to '削除', admin_comment_path(comment), method: :delete %>
-           </span>
-         　<p class="card-text"><%= comment.text %></p>
-         </div>
-       </div>
-     <% end %>
-        </div>
-        <!--<div>-->
-        <!--  <%#= form_with model: [@post, @comment], url:post_comments_path(@post),method: :post do|f| %>-->
-        <!--  <%#= f.text_area :text, rows: '5', placeholder: "コメントをここに" %>-->
-        <!--  <%#= f.submit "コメント", class: "btn btn-primary" %>-->
-        <!--</div>-->
-        <!--<#% end %>-->
+            <div class="card mb-3">
+              <div class="card-body">
+                <span class="comment-name small"><%= comment.user.name %></span>
+                <span><%= link_to '削除', admin_comment_path(comment), method: :delete %></span>
+             　  <p class="card-text"><%= comment.text %></p>
+              </div>
+            </div>
+          <% end %>
       </div>
     </div>
   </div>
