--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -15,7 +15,7 @@
         </div>
         <div class="form-group col-6">
           <h4>ジャンル</h4>
-          <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "選択して下さい", class: "form-control", id: "custom_genre_select" %>
+          <%= f.collection_select :genre_id, Genre.all, :id, :name,{include_blank: '-- 選択してください --'} ,{class: "form-control form-control-sm", id: "custom_genre_select",include_blank: 'aaa'} %>
         </div>
       </div>
       <div class="form-row mb-2">
