--- a/app/views/public/genres/show.html.erb
+++ b/app/views/public/genres/show.html.erb
@@ -43,10 +43,7 @@
           <% end %>
       </div>
     </div>
-
-    <div class="d-flex justify-content-center">
-      <%= paginate @posts %>
-    </div>
+    <%= render 'partial_template/paginate', posts: @posts %>
     <% else %>
     まだ投稿がありません
     <% end %>
