--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -36,7 +36,18 @@
             </tr>
             <tr>
               <th></th>
-              <td><%= image_tag @post.get_image, width: 200, height: 200 %></td>
+              <td>
+                <button type="button" data-toggle="modal" data-target="#exampleModalLong">
+                  <%= image_tag @post.get_image, width: 200, height: 200 %>
+                </button>
+                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-body">
+                      <%= image_tag @post.get_image, width: 500, height: 500 %>
+                    </div>
+                  </div>
+                </div>
+              </td>
             </tr>
             <tr>
               <th>本文</th>
@@ -46,7 +57,7 @@
         </table>
       </div>
     </div>
-</div>
+  </div>
 
   <div class="col-3">
     <div class="card">
