--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -63,12 +63,7 @@
             <% end %>
       </div>
     </div>
-
-    <div class="d-flex justify-content-center">
-      <div class=paginate>
-        <%= paginate @posts %>
-      </div>
-    </div>
+      <%= render 'partial_template/paginate', posts: @posts %>
       <% else %>
       まだ投稿がありません
       <% end %>
