--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,8 +1,11 @@
 <div class="row">
   <div class="col-7 offset-2 mb-3">
     <div class="card">
-      <div class="card-header">
-        <h5 class="card-title">レビュー詳細</h5>
+      <div class="card-header d-flex justify-content-between align-items-center">
+        <h5 class="card-title mb-0">レビュー詳細</h5>
+        <div id="favorite_btn_<%= @post.id %>">
+          <%= render 'partial_template/favoritebtn', post: @post %>
+        </div>
       </div>
       <div class="card-body">
         <table class="table">
@@ -85,7 +88,7 @@
        <%= link_to "編集",edit_post_path(@post),class:"btn btn-sm btn-success" %>
        <% end %>
        <% if @post.user == current_user %>
-       
+
        <% end %>
      </div>
   </div>
